docs/api/qiskit/0.19/qiskit.optimization.algorithms.MinimumEigenOptimizer.mdx
---
title: MinimumEigenOptimizer (v0.19)
description: API reference for qiskit.optimization.algorithms.MinimumEigenOptimizer in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.optimization.algorithms.MinimumEigenOptimizer
---

# MinimumEigenOptimizer

<Class id="qiskit.optimization.algorithms.MinimumEigenOptimizer" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/optimization/algorithms/minimum_eigen_optimizer.py" signature="MinimumEigenOptimizer(min_eigen_solver, penalty=None)" modifiers="class">
  A wrapper for minimum eigen solvers from Qiskit Aqua.

  This class provides a wrapper for minimum eigen solvers from Qiskit to be used within the optimization module. It assumes a problem consisting only of binary or integer variables as well as linear equality constraints thereof. It converts such a problem into a Quadratic Unconstrained Binary Optimization (QUBO) problem by expanding integer variables into binary variables and by adding the linear equality constraints as weighted penalty terms to the objective function. The resulting QUBO is then translated into an Ising Hamiltonian whose minimal eigen vector and corresponding eigenstate correspond to the optimal solution of the original optimization problem. The provided minimum eigen solver is then used to approximate the ground state of the Hamiltonian to find a good solution for the optimization problem.

  **Examples**

  Outline of how to use this class:

  ```python
  from qiskit.aqua.algorithms import QAOA
  from qiskit.optimization.problems import QuadraticProgram
  from qiskit.optimization.algorithms import MinimumEigenOptimizer
  problem = QuadraticProgram()
  # specify problem here
  # specify minimum eigen solver to be used, e.g., QAOA
  qaoa = QAOA(...)
  optimizer = MinimumEigenOptimizer(qaoa)
  result = optimizer.solve(problem)
  ```

  This initializer takes the minimum eigen solver to be used to approximate the ground state of the resulting Hamiltonian as well as a optional penalty factor to scale penalty terms representing linear equality constraints. If no penalty factor is provided, a default is computed during the algorithm (TODO).

  **Parameters**

  *   **min\_eigen\_solver** ([`MinimumEigensolver`](qiskit.aqua.algorithms.MinimumEigensolver "qiskit.aqua.algorithms.minimum_eigen_solvers.minimum_eigen_solver.MinimumEigensolver")) – The eigen solver to find the ground state of the Hamiltonian.
  *   **penalty** (`Optional`\[`float`]) – The penalty factor to be used, or `None` for applying a default logic.

  ## Methods

  <span id="minimumeigenoptimizer-get-compatibility-msg" />

  ### get\_compatibility\_msg

  <Function id="qiskit.optimization.algorithms.MinimumEigenOptimizer.get_compatibility_msg" signature="MinimumEigenOptimizer.get_compatibility_msg(problem)">
    Checks whether a given problem can be solved with this optimizer.

    Checks whether the given problem is compatible, i.e., whether the problem can be converted to a QUBO, and otherwise, returns a message explaining the incompatibility.

    **Parameters**

    **problem** ([`QuadraticProgram`](qiskit.optimization.problems.QuadraticProgram "qiskit.optimization.problems.quadratic_program.QuadraticProgram")) – The optimization problem to check compatibility.

    **Return type**

    `str`

    **Returns**

    A message describing the incompatibility.
  </Function>

  <span id="minimumeigenoptimizer-is-compatible" />

  ### is\_compatible

  <Function id="qiskit.optimization.algorithms.MinimumEigenOptimizer.is_compatible" signature="MinimumEigenOptimizer.is_compatible(problem)">
    Checks whether a given problem can be solved with the optimizer implementing this method.

    **Parameters**

    **problem** ([`QuadraticProgram`](qiskit.optimization.problems.QuadraticProgram "qiskit.optimization.problems.quadratic_program.QuadraticProgram")) – The optimization problem to check compatibility.

    **Return type**

    `bool`

    **Returns**

    Returns True if the problem is compatible, False otherwise.
  </Function>

  <span id="minimumeigenoptimizer-solve" />

  ### solve

  <Function id="qiskit.optimization.algorithms.MinimumEigenOptimizer.solve" signature="MinimumEigenOptimizer.solve(problem)">
    Tries to solves the given problem using the optimizer.

    Runs the optimizer to try to solve the optimization problem.

    **Parameters**

    **problem** ([`QuadraticProgram`](qiskit.optimization.problems.QuadraticProgram "qiskit.optimization.problems.quadratic_program.QuadraticProgram")) – The problem to be solved.

    **Return type**

    `MinimumEigenOptimizerResult`

    **Returns**

    The result of the optimizer applied to the problem.

    **Raises**

    [**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – If problem not compatible.
  </Function>
</Class>

